# lcm_bridge

./: CMakeLists.txt  README.md  package.xml
scripts/: plotData.py
src/: bridge_node.cpp  platform_node.cpp
