<?xml version="1.0"?>
<package format="2">
  <name>lcm_bridge</name>
  <version>0.0.0</version>
  <description>The lcm_bridge package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="NicoNelli@todo.todo">andreanisti</maintainer>


  <license>TODO</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <build_depend>rmw_implementation</build_depend>
     
  <build_depend>std_msgs</build_depend>
  
  <build_depend>apriltags</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  
  <exec_depend>rmw_implementation</exec_depend>    
    
  <exec_depend>std_msgs</exec_depend>    
  
  <exec_depend>apriltags</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>    
    
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>

  </export>
</package>
